[gd_scene load_steps=4 format=3 uid="uid://btomgr3cfccpb"]

[ext_resource type="PackedScene" uid="uid://bhhy55okktj07" path="res://Overlays/Events/scn_PropertySelector.tscn" id="1_5sts6"]
[ext_resource type="Script" path="res://Overlays/Events/Triggers/gd_PropertySetTriggerInterface.gd" id="1_obj72"]
[ext_resource type="PackedScene" uid="uid://djgdur52l3yhq" path="res://Overlays/Events/scn_FieldMatcher.tscn" id="3_ph4tx"]

[node name="PropertySetTrigger" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_obj72")

[node name="Description" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Description"]
layout_mode = 2
text = "When"

[node name="PropertySelectButton" parent="Description" instance=ExtResource("1_5sts6")]
layout_mode = 2
mode = 1

[node name="VagueLabel" type="Label" parent="Description"]
layout_mode = 2
text = "is changed:"

[node name="SpecificLabel" type="Label" parent="Description"]
visible = false
layout_mode = 2
text = "is changed to"

[node name="FieldMatcher" parent="Description" instance=ExtResource("3_ph4tx")]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2
text = "Specific Value"
